hack/legacy/test/cases/01-https/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-http
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/protocols: http
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: /foo
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-https
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/protocols: https
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: echo
            port:
              number: 8080
        path: /bar
        pathType: Prefix
